Update Google Compute Environment machine type
Google advised that the f1-micro tier will no longer be free after 31AUG21 and suggested e2-micro will be the new free tier.

--- a/config.cfg
+++ b/config.cfg
@@ -178,7 +178,7 @@ cloud_providers:
       name: "ubuntu-focal-20.04"
       owner: "099720109477"
   gce:
-    size: f1-micro
+    size: e2-micro
     image: ubuntu-2004-lts
     external_static_ip: false
   lightsail:
