--- a/config.cfg
+++ b/config.cfg
@@ -177,6 +177,10 @@ cloud_providers:
     image:
       name: "ubuntu-focal-20.04"
       owner: "099720109477"
+    # Change instance_market_type from "on-demand" to "spot" to take advantage of
+    # simplified spot launch options
+    # See https://aws.amazon.com/blogs/compute/new-amazon-ec2-spot-pricing/
+    instance_market_type: on-demand
   gce:
     size: e2-micro
     image: ubuntu-2004-lts
